@@ -7,6 +7,7 @@
     <parent>
         <groupId>com.apress.bgn</groupId>
         <artifactId>chapter09</artifactId>
+        <version>3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>process-api</artifactId>
@@ -30,6 +31,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <release>${java.version}</release>
+                    <!-- TODO remove this maybe, after 23 release -->
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
